--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body style="font-family: Arial;">
-    <h1>SECONDARY REGION WEB APP</h1>
+    <h1>SECONDARY REGION Canada Central WEB APP</h1>
   </body>
 </html>
